<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity$PlaceholderFragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pronounce_box"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:layout_marginBottom="1dp"
    android:elevation="1dp"
    android:background="@color/app_fg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/pronunciation_alphabet_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="bottom"
            android:textColor="@color/material_blue_grey_800"
            android:visibility="invisible"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear_edit_text"
            android:src="@drawable/ic_navigation_close"
            android:layout_gravity="end"
            android:visibility="invisible"
            android:background="@null"
            android:contentDescription="@string/close" />
    </LinearLayout>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textShortMessage"
        android:ems="10"
        android:textSize="32sp"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:hint="@string/pronounce_hint"
        android:id="@+id/edit_text" />

    <LinearLayout
            android:id="@+id/actions"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/listen_button"
            android:src="@drawable/listen_button_selector"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/listen" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/speak_button_selector"
            android:id="@+id/speak_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/speak"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/play_button_selector"
            android:id="@+id/play_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/play"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/add_button_selector"
            android:id="@+id/add_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/remove_button_selector"
            android:id="@+id/remove_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/remove"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>