<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice Pronunciation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="speak">Speak</string>
    <string name="play">Listen to yourself</string>
    <string name="listen">listen</string>
    <string name="add">add</string>
    <string name="pronounce_hint">Touch to type</string>
    <string name="content_authority">com.eightblocksaway.android.practicepronunciation.app</string>
    <string name="phrase_placeholder">Placeholder tag</string>
    <string name="mastery_level_text_placeholder">7/15</string>
    <string name="close">close</string>
    <string name="remove">remove</string>
    <string name="lorem_ipsum">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.</string>
    <string name="no_wifi_text">We couldn\'t reach the server</string>
    <string name="word_not_found_text">We couldn\'t find that phrase</string>
    <string name="app_error_text">Oops something went wrong</string>
    <string name="dictionary">DICTIONARY</string>
    <string name="hyphenation">HYPHENATION</string>
    <string name="list_placeholder_text">Your training list is empty</string>
    <string name="phrase_saved_toast">Word added to your list</string>
    <string name="TTS_no_available">No Text To Speech engine on device</string>
    <string name="points">POINTS</string>
    <string name="pronunciation_preference_title">Pronunciation dictionary</string>
    <string name="pronunciation_dictionary_key">pronunciation_dictionary_key</string>
    <string name="ahd">American Heritage Dictionary</string>
    <string name="ipa">International Phonetic Alphabet</string>
    <string name="ahd_key">ahd-legacy</string>
    <string name="ipa_key">ipa</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_dialog_key">about</string>
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_summary">Information about this app</string>
    <string name="about_message">This app is powered by the Oxford Dictionaries API</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_summary">Opens the Privacy Policy on a browser</string>
    <string name="privacy_policy_button">privacy_policy_button</string>

</resources>
