<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/app_fg"
        android:layout_marginBottom="8dp"
        android:elevation="1dp"
        tools:context="com.eightblocksaway.android.practicepronunciation.view.DetailFragment">

        <TextView android:id="@+id/detail_phrase_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@color/primary"
            android:text="@string/phrase_placeholder"
            android:textStyle="bold"
            android:textColor="@color/app_fg"
            android:clickable="true"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/app_fg"
            android:layout_marginBottom="8dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/detail_points_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/points"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/detail_points_layout"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/detail_points_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:paddingRight="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/mastery_level_text_placeholder"/>

                <ProgressBar
                    android:id="@+id/detail_points_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="@integer/max_points"
                    android:progress="7"
                    style="@android:style/Widget.ProgressBar.Horizontal"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/hyphenation" />

            <LinearLayout
                android:id="@+id/hyphenation_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/dictionary" />

            <LinearLayout
                android:id="@+id/definition_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
